fix(SubHeader): editable text size was too small (#4450)
* fix(SubHeader): editable text size was too small

* changeset

* using ds size

* fix

* Delete large-toes-battle.md

* changeset

--- a/packages/components/src/SubHeaderBar/TitleSubHeader/TitleSubHeader.module.scss
+++ b/packages/components/src/SubHeaderBar/TitleSubHeader/TitleSubHeader.module.scss
@@ -1,4 +1,5 @@
 @use '~@talend/bootstrap-theme/src/theme/guidelines' as *;
+@use '~@talend/design-tokens/lib/tokens';
 
 @import '~@talend/bootstrap-theme/src/theme/animation';
 
@@ -55,6 +56,11 @@ $header-title-max-width: 90rem;
 				line-height: unset;
 				margin: 0;
 			}
+
+			input {
+				width: tokens.$coral-sizing-maximal;
+			}
+
 		}
 
 		&-subtitle {
